// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withPymStorage should clear storage 1`] = `"{}"`;

exports[`withPymStorage should clear storage 2`] = `
Array [
  Object {
    "key": "pymStorage.localStorage.response",
    "value": "{\\"id\\":\\"0\\"}",
  },
]
`;

exports[`withPymStorage should get key of storage 1`] = `
Array [
  Object {
    "key": "pymStorage.localStorage.response",
    "value": "{\\"id\\":\\"0\\",\\"result\\":\\"b\\"}",
  },
  Object {
    "key": "pymStorage.localStorage.response",
    "value": "{\\"id\\":\\"0\\",\\"result\\":null}",
  },
]
`;

exports[`withPymStorage should get length of storage 1`] = `
Array [
  Object {
    "key": "pymStorage.localStorage.response",
    "value": "{\\"id\\":\\"0\\",\\"result\\":3}",
  },
]
`;

exports[`withPymStorage should handle handle errors 1`] = `
Array [
  Object {
    "key": "pymStorage.localStorage.error",
    "value": "{\\"id\\":\\"0\\",\\"error\\":\\"error\\"}",
  },
]
`;

exports[`withPymStorage should handle unknown method 1`] = `"[{\\"key\\":\\"pymStorage.localStorage.error\\",\\"value\\":\\"{\\\\\\"id\\\\\\":\\\\\\"0\\\\\\",\\\\\\"error\\\\\\":\\\\\\"Unknown method unknown\\\\\\"}\\"}]"`;

exports[`withPymStorage should set, get and remove item 1`] = `"{\\"coral:key\\":\\"test\\"}"`;

exports[`withPymStorage should set, get and remove item 2`] = `"{}"`;

exports[`withPymStorage should set, get and remove item 3`] = `"[{\\"key\\":\\"pymStorage.localStorage.response\\",\\"value\\":\\"{\\\\\\"id\\\\\\":\\\\\\"0\\\\\\"}\\"},{\\"key\\":\\"pymStorage.localStorage.response\\",\\"value\\":\\"{\\\\\\"id\\\\\\":\\\\\\"1\\\\\\",\\\\\\"result\\\\\\":\\\\\\"test\\\\\\"}\\"},{\\"key\\":\\"pymStorage.localStorage.response\\",\\"value\\":\\"{\\\\\\"id\\\\\\":\\\\\\"2\\\\\\"}\\"}]"`;
